[tool.poetry]
name = "duckberg"
version = "0.1.0"
description = "duckdb vs iceberg"
authors = ["vishnu rao"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "0.10.0"
numpy = "1.26.4"
pyarrow = "15.0.2"
pandas = "2.2.1"
parquet-cli = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
